--- a/style.css
+++ b/style.css
@@ -1,4 +1,253 @@
-html {
-  height: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+  --main-color: white;
+  --bg-color: #2B2A2A;
+  --icons-footer: #757575;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100vh;
   width: 100%;
+  background-color: var(--bg-color);
+  color: var(--main-color);
+}
+
+p {
+  font-size: 0.9rem;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  padding: 3%;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 20px; 
+}
+
+.site-icon{
+  width: 32px;
+  height: 32px;
+}
+
+.title {
+  font-size: 1.5rem;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.nav-itens {
+  display: flex;
+  gap: 40px; 
+}
+
+.nav-itens a {
+  text-decoration: none;
+  color: var(--main-color); 
+  font-size: 1.1rem;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+table, td, th {
+  border: 1px solid var(--main-color);
+  border-collapse: collapse;
+  padding: 10px;
+  font-size: 0.9rem;
+  font-weight: 300;
+  font-family: "Poppins", serif;
+  font-style: normal;
+}
+
+.legenda {
+  padding: 10px;
+  font-size: 1.0rem;
+  font-weight: 400;
+  font-family: "Poppins", serif;
+  font-style: normal;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gravar {
+  width: 20%;
+  padding: 20px;
+  background-color: var(--main-color);
+  color: var(--bg-color);
+  border: none;
+  border-radius: 10px;
+  font-size: 1.3rem;
+  font-weight: 500;
+  font-family: "Poppins", serif;
+  font-style: normal;
+  margin-bottom: 10%;
+}
+
+/* Fundo do popup (inicialmente oculto) */
+.popup {
+  display: none; /* Escondido por padrão */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Fundo escuro com transparência */
+  justify-content: center;
+  align-items: center;
+}
+
+/* Caixa do popup */
+.popup-content {
+  background: #313131;
+  color: var(--main-color);
+  padding: 20px;
+  height: 350px;
+  width: 350px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.popup-content label, h2 {
+  font-size: 1.0rem;
+  font-weight: 400;
+  font-family: "Poppins", serif;
+  font-style: normal;
+}
+
+/* Botão de fechar (X) */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+/* Campos de entrada */
+input {
+  padding: 8px;
+  margin: 5px 0;
+  color: var(---main-color);
+  background-color: #454545;
+  border: 1px solid var(---main-color);
+  border-radius: 5px;
+}
+
+.gravar:hover {
+  background: #b0b0b0;
+}
+
+.salvar {
+  background: var(--main-color); /* Azul escuro */
+  color: #313131;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 0.3s ease;
+}
+
+.salvar:hover {
+  background: #b0b0b0; /* Azul mais escuro ao passar o mouse */
+  color: #313131;
+}
+
+.salvar:active {
+  background: #b0b0b0; /* Azul mais escuro ao passar o mouse */
+  color: #313131;
+}
+
+
+footer {
+   background-color: #313131;
+   border-radius: 50px 50px 0px 0px;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
+  gap: 20px;
+}
+
+.footer-container img {
+  width: 20px;
+  height: 20px;
+}
+
+.image-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1%;
+}
+
+.image-group p {
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: "Poppins", serif;
+  font-style: normal;
+  color: var(--icons-footer);
+}
+
+.desenvolvedores-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 2%;
+}
+
+.desenvolvedor {
+  background-color: #313131;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+.imagem-desenvolvedor {
+  width: 32px;
+}
+
+.info-desenvolvedor {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.descricao-desenvolvedor {
+  color: #818181;
 }
