--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ input {
 footer {
    background-color: #313131;
    border-radius: 50px 50px 0px 0px;
+   margin-top: 30px;
 }
 
 .footer-container {
@@ -227,7 +228,7 @@ footer {
 .desenvolvedores-container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   margin: 2%;
 }
 
